# snake-evolution

libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  lib.rs  mutation.rs  selection.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: activation.rs  layer.rs  layer_topology.rs  lib.rs  network.rs  neuron.rs
libs/snake-evolution/: Cargo.toml
libs/snake-evolution/src/: evolution.rs  main.rs  snake.rs
libs/snake-evolution/src/evolution/: brain.rs  snake.rs  snake_individual.rs
libs/snake-evolution/src/snake/: direction.rs  game.rs  position.rs
