[package]
name = "snake-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-neural-network = { path = "../neural-network" }
lib-genetic-algorithm = { path = "../genetic-algorithm" }
rand = "0.8.5"
console = "0.15.0"
ordered-float = "3.0.0"
strum = "0.24.0"
strum_macros = "0.24.0"
